Fix cards overflow

--- a/assets/sb-admin/css/_cards.scss
+++ b/assets/sb-admin/css/_cards.scss
@@ -1,3 +1,7 @@
 #card-toggle.collapsed {
     transform: rotate(180deg);
 }
+
+.card-body {
+    overflow-x: auto;
+}
